Bug 150732 - ReportBuilder: Moving fields from one section to another destroys connection of field to datasource
Summary: ReportBuilder: Moving fields from one section to another destroys connection ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.2.5.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.6.0
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2022-08-31 19:17 UTC by Robert Großkopf
Modified: 2023-05-11 13:32 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Open the report for editing, move a field to the group. (17.94 KB, application/vnd.oasis.opendocument.database)
2022-08-31 19:17 UTC, Robert Großkopf
Details
bt with debug symbols (6.13 KB, text/plain)
2022-09-08 16:28 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2022-08-31 19:17:15 UTC
Created attachment 182125 [details]
Open the report for editing, move a field to the group.

Open the attached database.
Open the report for editing.
Move one field from Details to the group.
Execute the report - no value will be shown.
Properties → Data will show: field:[ID]
Save the report.
Close the report and reopen the report for editing.
The moved field won't be there any more.

One hint: Moving a field will work if it has been just added. Moving the field won't work if the report has been saved, closed and reopened for editing.

All tested with LO 7.4.0.3 on OpenSUSE 15.3 64bit rpm Linux
Comment 1 Alexey Rukin 2022-08-31 19:22:29 UTC
An old bug introduced between 7.1 and 7.2, affects also the Windows version. Reports created by Report Wizard exhibit this issue immediately.
Comment 2 Robert Großkopf 2022-08-31 19:26:46 UTC
Bug doesn't appear in LO 7.1.5.2 on the same system, so a regression.
A part of this bug appears in LO 7.2.0.3. The field, which is copied, won't show any content and won't show any thing else like field:[ID]
The whole buggy behavior as described could be detected also with LO 7.2.5.2

All tested on the same machine, OpenSUSE 15.3 64bit rpm Linux.
Comment 3 Stang 2022-09-01 00:39:49 UTC
Can confirm problem. For me this version was last one working OK:

Version: 7.1.5.2 / LibreOffice Community
Build ID: 85f04e9f809797b8199d13c421bd8a2b025d52b5
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

This version no longer worked:

Version: 7.2.0.1 / LibreOffice Community
Build ID: 32efc3b7f3a71cfa6a7fa3f6c208333df48656cc
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 4 Julien Nabet 2022-09-08 16:28:29 UTC
Created attachment 182312 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I got an assertion when moving a field from a section to another one.
Comment 5 Julien Nabet 2022-09-08 16:31:21 UTC
Noel: I had an assertion testing this one (see bt in my previous comment).

I wonder if it may be related to the pb here.
At least, I think that even if your "ref sdr" patch will generate some bugtrackers, it will allow to tackle some "hidden" technical pbs.

Meanwhile, let's put this one to NEW since Robert is the Base QA expert + Stang reproduced the pb.
Comment 6 Commit Notification 2022-09-09 12:46:43 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/521d438c41b2ac59bffc94763d1a2cb568ff9a60

tdf#150732 ReportBuilder: Moving fields from one section to another crashes

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 raal 2023-05-05 17:33:00 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-7.2.
Adding Cc: to Noel Grandin ; Could you possibly take a look at this one?
Thanks
 e38859cd8ecd742edd9ebcfe2090147b23c4fb55 is the first bad commit
commit e38859cd8ecd742edd9ebcfe2090147b23c4fb55
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Wed Feb 10 16:54:09 2021 +0100

    source 09cb778b6eb7d3a5b9029965a1320b49c90e7295

110633: clean up SdrObject cloning | https://gerrit.libreoffice.org/c/core/+/110633
Comment 8 Commit Notification 2023-05-11 13:31:13 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/957ac2bd3e6be97179f87f96fb9b5f13c0635834

tdf#150732 ReportBuilder,Moving fields breaks connection of field to datasource

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.