tdf#150732 ReportBuilder: Moving fields from one section to another crashes

regression from
        commit 8611f6e259b807b4f19c8dc0eab86ca648891ce3
        Author: Noel Grandin <noel.grandin@collabora.co.uk>
        Date:   Thu May 27 10:27:46 2021 +0200
        ref-count SdrObject

Fixes 2 issues
(1) where I removed some code that we need
(2) where the OUnoObject constructor was deleting the object is was
constructing

Note that this only fixes the crash that Julien saw, not the underlying
problem that this tdf bug reports. That bug appears to predate my
commit.

Change-Id: I3878ef460dedc3c2a6c86b88fce9d155e79bc0b8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139714
Tested-by: Julien Nabet <serval2412@yahoo.fr>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>